--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -110,7 +110,7 @@ For more information about activation keys, see xref:client-configuration:activa
 
 
 .Procedure: Modifying a Bootstrap Script
-. On your {productname} server, as root at the command line change to the bootstrap directory with:
+. On your {productname} Server, as root at the command line change to the bootstrap directory with:
 +
 ----
 cd /srv/www/htdocs/pub/bootstrap/
@@ -164,7 +164,7 @@ cd /srv/www/htdocs/pub/bootstrap/
 ----
 +
 
-. Run this command to execute the bootstrap script on the client; replace [systemitem]`` EXAMPLE.COM`` with the host name of your client:
+. Run this command to execute the bootstrap script on the client; replace [systemitem]``EXAMPLE.COM`` with the host name of your client:
 +
 
 ----
