--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -38,7 +38,7 @@ If you register openSUSE Leap 15 or SLE 15 systems using Python 2, the bootst
 
 
 
-== The [command]``mgr-bootstrap`` command
+== Create a Bootstrap Script with [command]``mgr-bootstrap``
 
 The [command]``mgr-bootstrap`` command generates custom bootstrap scripts.
 A bootstrap script is used by {productname} client systems for simplifying their initial registration and configuration.
@@ -95,7 +95,7 @@ For more information about how to resolve this error, see ``Registering Older Cl
 
 
 [[modify.bootstrap.script]]
-== Editing a Bootstrap Script
+== Edit a Bootstrap Script
 
 You can copy and modify the template bootstrap script you created to customize it.
 A minimal requirement when modifying a bootstrap script for use with {productname} is the inclusion of an activation key.
