sle 11 is obsolete now

--- a/modules/client-configuration/pages/contact-methods-rhnsd.adoc
+++ b/modules/client-configuration/pages/contact-methods-rhnsd.adoc
@@ -5,12 +5,13 @@
 The {productname} daemon ([command]``rhnsd``) runs on traditional client systems and periodically connects with {productname} to check for new updates and notifications.
 It does not apply to Salt clients.
 
-It is only used on {sle}{nbsp}11 and {rhnminrelease6}, as these systems do not use systemd.
-On later operating systems, a systemd timer ([systemitem]``rhnsd.timer``) is used and controlled by [systemitem]``rhnsd.service``.
 
-Start the daemon with [command]``/etc/init.d/rhnsd``.
 
-By default, it checks every four hours for new actions.
+== Start rhnsd ==
+
+A systemd timer ([systemitem]``rhnsd.timer``) is used and controlled by [systemitem]``rhnsd.service``.
+
+By default, [systemitem]``rhnsd`` checks every four hours for new actions.
 This means it can take some time for clients to execute scheduled actions.
 
 To check for updates, [systemitem]``rhnsd`` runs the external [systemitem]``mgr_check`` program located in [path]``/usr/sbin/``.
