Extend note about using Salt SSH with Salt Bundle in 4.2

--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -109,6 +109,8 @@ And restart the services using [command]``spacewalk-service restart``.
 ====
 The bootstrap repository must be created before bootstrapping the client with {webui}. Salt SSH is using the Salt Bundle taken from the bootstrap repository based on the detected target operating system.
 For more information, see xref:client-configuration:bootstrap-repository.adoc#_prepare_to_create_a_bootstrap_repository[Prepare to Create a Bootstrap Repository]
+
+The Salt Bundle must also be included to the bootstrap repository relevant to the client by calling [command]``mgr-create-bootstrap-repo`` explicitly specifying [package]``venv-salt-minion`` as an additional package. For more information, see xref:client-configuration:contact-methods-saltbundle.adoc#_client_registration_with_salt_bundle_as_a_minion[Client Registration with Salt Bundle as a Minion].
 ====
 
 [IMPORTANT]
