--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -51,7 +51,7 @@ Replace [systemitem]``<ACTIVATION_KEYS`` and [systemitem]``<EDITED_NAME>`` with 
 mgr-bootstrap --activation-key=<ACTIVATION_KEYS> --script=bootstrap-<EDITED NAME>.sh
 ----
 
-The [command]``mgr-bootstrap`` command offers several other options, including the ability to set a specific hostname, set specific GPG keys, and set the registration method (traditional, salt-minion, salt-bundle).
+The [command]``mgr-bootstrap`` command offers several other options, including the ability to set a specific hostname, set specific GPG keys, and set the registration method (traditional, salt-minion, or salt-bundle).
 
 For more information, see the [literal]``mgr-bootstrap`` man page, or run [command]``mgr-bootstrap --help``.
 
