--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -183,7 +183,7 @@ The string is the identifier for the [literal]``MIGRATIONTARGET`` of the other c
 +
 ----
 spacecmd -- system_scheduleproductmigration group:mpm-target-sles15sp3 \
-    sle-product-sles15-sp3-pool-x86_64 [190,203,195,1242] -d
+    sle-product-sles15-sp3-pool-x86_64 "[190,203,195,1242]" -d
 ----
 
 The syntax for the [command]``system_scheduleproductmigration`` command is as follows:
@@ -224,10 +224,10 @@ To identify this value for systems in the group [literal]``group:mpm-target-sles
 spacecmd -- system_listmigrationtargets group:mpm-target-sles15sp3
 ----
 +
-The [literal]``MIGRATION_TARGET`` parameter must be passed in the following format:
+The [literal]``MIGRATION_TARGET`` parameter must be passed in the following format; note necessary shell quotation to prevent sideeffects with brackets:
 +
 ----
-[190,203,195,1242]
+"[190,203,195,1242]"
 ----
 
 Options::
