--- a/modules/administration/pages/troubleshooting/tshoot-oes-repos-enablement.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-oes-repos-enablement.adoc
@@ -16,7 +16,7 @@ To enable Open Enterprise Server (OES) on {productname} Server, follow the the p
 +
 . Select option for adding new and type in Microfocus credentials.
 +
-. Go to [guimenu]``Admin > Setup Wizard > Organization Credentials``page and wait for the refresh operation to complete.
+. Go to [guimenu]``Admin > Setup Wizard > Organization Credentials`` and wait for the refresh operation to complete.
 +
 . OES should be visible on the refreshed product list. 
     You can now enable it like any other products.
