--- a/modules/administration/pages/troubleshooting/tshoot-oes-repos-enablement.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-oes-repos-enablement.adoc
@@ -1,7 +1,7 @@
 [[troubleshooting-oes-repositories-enablement]]
 = Troubleshooting OES repositories enablement
 
-To enable Open Enterprise Server (OES) on {productname} Server, follow the the procedure described.
+To enable Open Enterprise Server (OES) on {productname} Server, follow the procedure described.
  
 .Procedure: Enabling OES repositories
 [role=procedure]
