--- a/modules/administration/pages/troubleshooting/tshoot-oes-repos-enablement.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-oes-repos-enablement.adoc
@@ -27,4 +27,4 @@ To enable Open Enterprise Server (OES) on {productname} Server, follow the proce
 Do not change [path]``additional_products.json`` or [path]``java.product_tree_tag``.
 ====
 
-For more details about OES documentation, see https://www.microfocus.com/documentation/open-enterprise-server/.
+For more information about OES, see https://www.microfocus.com/documentation/open-enterprise-server/.
