note about rebooting transactional update systems (draft)
https://bugzilla.suse.com/show_bug.cgi?id=1201476
https://github.com/SUSE/spacewalk/issues/19340
https://github.com/uyuni-project/uyuni-docs/issues/1843

--- a/modules/administration/pages/actions.adoc
+++ b/modules/administration/pages/actions.adoc
@@ -66,6 +66,11 @@ In some case, actions take a long time, which could mean that actions issued aft
 For example, if you instruct a client to reboot, then issue a second command, the second action could fail because the reboot is still occurring.
 To ensure that actions occur in the correct order, use action chains.
 
+[IMPORTANT]
+====
+For transactional update systems, please consider that an action chain is executed inside a single snapshot, until there's a reboot action. This can cause some limitations. and a link to the section where reboot (and warn) on SLE Micro is explained.
+====
+
 You can use action chains on both traditional and Salt clients.
 Action chains can include any number of these actions, in any order:
 
