--- a/modules/administration/pages/actions.adoc
+++ b/modules/administration/pages/actions.adoc
@@ -68,7 +68,9 @@ To ensure that actions occur in the correct order, use action chains.
 
 [IMPORTANT]
 ====
-For transactional update systems, please consider that an action chain is executed inside a single snapshot, until there's a reboot action. This can cause some limitations. and a link to the section where reboot (and warn) on SLE Micro is explained.
+For transactional update systems, an action chain is executed inside a single snapshot, until there is a reboot action.
+This can cause some limitations.
+// Here add a link to the section where reboot (and warn) on SLE Micro is explained.
 ====
 
 You can use action chains on both traditional and Salt clients.
