Added info about enabling OES repos. (#1864)
* Added info about enabling OES repos.

* Typo fix.

* Typo fix.

* Clanup.

* Fixing ifeval error.

* Update .changelog

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/administration/pages/troubleshooting/tshoot-oes-repos-enablement.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/administration/pages/troubleshooting/tshoot-oes-repos-enablement.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/administration/pages/troubleshooting/tshoot-oes-repos-enablement.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/administration/pages/troubleshooting/tshoot-oes-repos-enablement.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -76,6 +76,11 @@ endif::[]
 *** xref:troubleshooting/tshoot-mounting-vartmp-with-noexec.adoc[Troubleshooting Mounting /var/tmp with noexec]
 *** xref:troubleshooting/tshoot-not-enough-disk-space.adoc[Troubleshooting Not Enough Disk Space]
 *** xref:troubleshooting/tshoot-notifications.adoc[Troubleshooting Notifications]
+
+ifeval::[{suma-content} == true]
+*** xref:troubleshooting/tshoot-oes-repos-enablement.adoc[Troubleshooting OES repositories enablement]
+endif::[]
+
 *** xref:troubleshooting/tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
 *** xref:troubleshooting/tshoot-packages.adoc[Troubleshooting Packages]
 *** xref:troubleshooting/tshoot-packages-proxy.adoc[Troubleshooting Proxy Cache Repository]
