Backport. Added info about enabling OES repos.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -76,6 +76,11 @@ endif::[]
 *** xref:tshoot-mounting-vartmp-with-noexec.adoc[Troubleshooting Mounting /var/tmp with noexec]
 *** xref:tshoot-not-enough-disk-space.adoc[Troubleshooting Not Enough Disk Space]
 *** xref:tshoot-notifications.adoc[Troubleshooting Notifications]
+
+ifeval::[{suma-content} == true]
+*** xref:tshoot-oes-repos-enablement.adoc[Troubleshooting OES repositories enablement]
+endif::[]
+
 *** xref:tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
 *** xref:tshoot-packages.adoc[Troubleshooting Package Inconsistencies]
 *** xref:tshoot-packages-proxy.adoc[Troubleshooting Repository Via Proxy Issues]
