--- a/modules/client-configuration/pages/contact-methods-salt.adoc
+++ b/modules/client-configuration/pages/contact-methods-salt.adoc
@@ -12,7 +12,7 @@ Software updates are generally pushed from the server to the client.
 Connections are initiated from the client.
 This means you must open ports on the server, not on clients.
 The Salt clients are also known as Salt minions.
-{productname} Server (also known as Salt Server) installs a small daemon on every client.
+{productname} Server installs a daemon on every client.
 
 If you need to use Salt clients in a disconnected setup you can configure Push via Salt SSH as a contact method.
 With this contact method, clients can be located in a firewall-protected zone called a DMZ.
