--- a/modules/client-configuration/pages/contact-methods-saltssh.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltssh.adoc
@@ -33,7 +33,7 @@ image::salt-ssh-contact-taigon.png[scaledwidth=80%]
 
 To use Push via Salt SSH, you must have the SSH daemon running on the client, and reachable by the [systemitem]``salt-api`` daemon running on the {productname} Server.
 // FIXME: or salt-bundle
-Additionally, Python version supported by Salt must be available on the remote system.
+Additionally, the required Python version will be installed with the salt-bundle on the remote system.
 
 
 [NOTE]
