--- a/modules/client-configuration/pages/contact-methods-intro.adoc
+++ b/modules/client-configuration/pages/contact-methods-intro.adoc
@@ -19,6 +19,7 @@ It does not scale as well as Salt.
 [WARNING]
 ====
 Newer operating systems are not supported and will not be added in the future.
+The traditional contact method is deprecated and will be removed in the next version.
 Use it only when a needed feature is still not covered by Salt.
 For feature comparison, see xref:client-configuration:supported-features.adoc[].
 ====
