osad is an enhancement, per feedback

--- a/modules/client-configuration/pages/contact-methods-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-traditional.adoc
@@ -18,7 +18,7 @@ For more information, see xref:client-configuration:contact-methods-rhnsd.adoc[]
 Traditional with OSAD::
 is the same as traditional but allows the server to
 push updates to clients.
-OSAD is an alternative contact method between {productname} and traditional clients.
+OSAD is an enhancement to [command]``rhnsd``
 OSAD allows traditional clients to execute scheduled actions immediately.
 It does not apply to Salt clients.
 ////
