--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -9,6 +9,8 @@ This section contains summary of supported client systems. For a detailed list o
 include::snippets/traditional_client_warning.adoc[]
 
 
+
+[[supported-features-clients]]
 == Supported Client Systems
 
 Supported operating systems for traditional and Salt clients are listed in this table.
@@ -140,6 +142,11 @@ ifeval::[{suma-content} == true]
 | {rhel} 7
 | {x86_64}
 | {check}
+| {check}
+
+| {rocky} 9
+| {x86_64}, {aarch64}, {ppc64le}, {s390x}
+| {cross}
 | {check}
 
 | {rocky} 8
@@ -277,8 +284,13 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 
+| {rocky} 9
+| {x86_64}, {aarch64}, {ppc64le}, {s390x}
+| {cross}
+| {check}
+
 | {rocky} 8
-| {x86_64}, {ppc64le}, {aarch64}
+| {x86_64}, {aarch64}
 | {cross}
 | {check}
 
