--- a/modules/administration/pages/troubleshooting/tshoot-cloned-salt-clients.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-cloned-salt-clients.adoc
@@ -11,6 +11,6 @@ This is caused by the new, cloned, system having the same machine ID as an exist
 You can adjust this manually to correct the error and register the cloned system successfully.
 
 
-For more information and instructions, see xref:administration:tshoot-registerclones.adoc[].
+For more information and instructions, see xref:administration:troubleshooting/tshoot-registerclones.adoc[].
 
 
