--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -27,5 +27,5 @@ yourself. Furthermore cleaning up a Salt minion does not remove Salt itself.
 ====
 Normally you migrate a traditional client to a Salt minion without deleting the client. 
 Salt automatically detects that you have a traditional client and does the necessary changes itself. 
-If you already deleted the traditional client and want to register it as a Salt minion again, see xref:administration:tshoot-intro.adoc[Troubleshooting].
+If you already deleted the traditional client and want to register it as a Salt minion again, see xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
 ====
