Backport43 - New files location for troubleshooting files (#1868)
* New locations of troubleshooting guide files.

* More cleanup.

* More cleanup.

* Update modules/client-configuration/pages/delete-clients.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/administration/pages/actions.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/client-configuration/pages/contact-methods-traditional.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/client-configuration/pages/contact-methods-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-traditional.adoc
@@ -21,5 +21,5 @@ We encourage all new deployments to use Salt clients and Salt proxies exclusivel
 Be aware that when migrating from traditional clients to Salt minions you do not have to delete the registered clients before.
 You can just register them as Salt minions and Salt will do the necessary steps with the traditional client.
 If you already deleted the traditional client and the registration as Salt minion is not possible anymore, see
-xref:administration:tshoot-register-trad-as-salt-after-deletion.adoc[Troubleshooting Registering a traditional client as Salt minion after deleting it].
+xref:administration:troubleshooting/tshoot-register-trad-as-salt-after-deletion.adoc[].
 ====
