--- a/modules/administration/pages/actions.adoc
+++ b/modules/administration/pages/actions.adoc
@@ -147,7 +147,7 @@ touch /etc/sysconfig/rhn/allowed-actions/script/run
 ====
 For Salt clients, remote commands are run from the [path]``/tmp/`` directory on the client.
 To ensure that remote commands work accurately, do not mount ``/tmp`` with the [parameter]``noexec`` option.
-For more information, see xref:client-configuration:tshoot-clients.adoc#_mounting_tmp_with_noexec[Troubleshooting Clients]
+For more information, see xref:administration:troubleshooting/tshoot-intro.adoc[].
 ====
 
 [WARNING]
