--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -257,8 +257,8 @@ Your {es} clients are now ready to be registered.
 For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
 
 
-[WARNING]
-====
-To register and use {sleses}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
-For more information about how to resolve this error, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-====
+//[WARNING]
+//====
+//To register and use {sleses}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
+//For more information about how to resolve this error, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
+//====
