Removing SLES ES 6 support.

--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -69,9 +69,6 @@ The products you need for this procedure are:
 | OS Version
 | Product Name
 
-| {es} 6
-| SUSE Linux Enterprise Server with Expanded Support 6 x86_64
-
 | {es} 7
 | SUSE Linux Enterprise Server with Expanded Support 7 x86_64
 
@@ -79,12 +76,12 @@ The products you need for this procedure are:
 | RHEL or SLES ES or CentOS 8 Base and SUSE Linux Enterprise Server with Expanded Support 8 x86_64
 |===
 
-[NOTE]
-====
-{es} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {es} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
-====
+//[NOTE]
+//====
+//{es} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {es} 6 clients using these packages will fail.
+//If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+//====
 
 {productname} requires tools channels that contain additional software.
 This procedure creates these tools channels:
@@ -95,18 +92,17 @@ This procedure creates these tools channels:
 |===
 
 | OS Version | Base Channel                     | Tools Channel
-| {es} 6     | RHEL Expanded Support 6          | RES6-SUSE-Manager-Tools x86_64
 | {es} 7     | RHEL Expanded Support 7          | RES7-SUSE-Manager-Tools x86_64
 | {es} 8     | RHEL or SLES ES or CentOS 8 Base | RES8-Manager-Tools-Pool for x86_64 and RES8-Manager-Tools-Updates for x86_64
 
 |===
 
-[NOTE]
-====
-{es} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {es} 6 clients using these packages will fail.
-If you need to bootstrap new {es} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
-====
+//[NOTE]
+//====
+//{es} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {es} 6 clients using these packages will fail.
+//If you need to bootstrap new {es} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+//====
 
 include::snippets/addchannels_vendor_webui.adoc[]
 
@@ -127,11 +123,6 @@ The channels you need for this procedure are:
 | Client Channel
 | Tools Channel
 
-| {es} 6
-| rhel-x86_64-server-6
-| -
-| res6-suse-manager-tools-x86_64
-
 | {es} 7
 | rhel-x86_64-server-7
 | -
@@ -144,12 +135,12 @@ The channels you need for this procedure are:
 
 |===
 
-[NOTE]
-====
-{es} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {es} 6 clients using these packages will fail.
-If you need to bootstrap new {es} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
-====
+//[NOTE]
+//====
+//{es} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {es} 6 clients using these packages will fail.
+//If you need to bootstrap new {es} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+//====
 
 include::snippets/addchannels_novendor_cli.adoc[]
 
@@ -265,8 +256,8 @@ Your {es} clients are now ready to be registered.
 For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
 
 
-[WARNING]
-====
-To register and use {sleses}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
-For more information about how to resolve this error, see ``Registering Older Clients`` at xref:client-configuration:tshoot-clients.adoc[].
-====
+//[WARNING]
+//====
+//To register and use {sleses}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
+//For more information about how to resolve this error, see ``Registering Older Clients`` at xref:client-configuration:tshoot-clients.adoc[].
+//====
