another admon per feedback

--- a/modules/administration/pages/actions.adoc
+++ b/modules/administration/pages/actions.adoc
@@ -70,7 +70,7 @@ To ensure that actions occur in the correct order, use action chains.
 ====
 For transactional update systems, an action chain is executed inside a single snapshot, until there is a reboot action.
 This can cause some limitations.
-// Here add a link to the section where reboot (and warn) on SLE Micro is explained.
+// For more information, see ||a link to the section where reboot (and warn) on SLE Micro is explained||.
 ====
 
 You can use action chains on both traditional and Salt clients.
@@ -127,6 +127,13 @@ You can use this procedure to enable it manually, instead.
 
 Before you begin, ensure your client is subscribed to the appropriate tools child channel for its installed operating system.
 For more information about subscribing to software channels, see xref:client-configuration:channels.adoc[].
+
+[IMPORTANT]
+====
+For transactional update systems, consider that a remote command is run inside a single snapshot.
+This can cause some limitations.
+// For more information, see ||a link to the section where reboot (and warn) on SLE Micro is explained||.
+====
 
 
 
