--- a/modules/client-configuration/pages/clients-microos.adoc
+++ b/modules/client-configuration/pages/clients-microos.adoc
@@ -12,6 +12,15 @@ This feature is expected to be fully supported in a later version of {productnam
 Do not use this feature on production systems.
 ====
 
+The {microos} uses transactional updates.
+Transactional updates are atomic (all updates are applied only if all updates succeed) and support rollbacks.
+They do not affect a running system as no changes are activated until after the system is rebooted.
+This information is displayed in the menu:Systems[Details > Overview] subtab.
+
+// FiXME: ref to Leap
+For more information on transactional updates and rebooting, see
+https://documentation.suse.com/sles/html/SLES-all/cha-transactional-updates.html.
+
 
 
 == Add Software Channels
