--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -23,7 +23,8 @@ Transactional updates are atomic (all updates are applied only if all updates su
 They do not affect a running system as no changes are activated until after the system is rebooted.
 This information is displayed in the menu:Systems[Details > Overview] subtab.
 
-For more information on transactional updates, see https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-transactional-updates.html
+For more information on transactional updates and rebooting, see
+https://documentation.suse.com/sles/html/SLES-all/cha-transactional-updates.html.
 
 [WARNING]
 ====
