ref to slemicro

--- a/modules/administration/pages/actions.adoc
+++ b/modules/administration/pages/actions.adoc
@@ -70,7 +70,7 @@ To ensure that actions occur in the correct order, use action chains.
 ====
 For transactional update systems, an action chain is executed inside a single snapshot, until there is a reboot action.
 This can cause some limitations.
-// For more information, see ||a link to the section where reboot (and warn) on SLE Micro is explained||.
+For more information, see xref:client-configuration:clients-slemicro.adoc[].
 ====
 
 You can use action chains on both traditional and Salt clients.
@@ -132,7 +132,7 @@ For more information about subscribing to software channels, see xref:client-con
 ====
 For transactional update systems, consider that a remote command is run inside a single snapshot.
 This can cause some limitations.
-// For more information, see ||a link to the section where reboot (and warn) on SLE Micro is explained||.
+For more information, see xref:client-configuration:clients-slemicro.adoc[].
 ====
 
 
