Added explanation of automatic custom channels synchronization

--- a/modules/client-configuration/pages/snippets/addchannels_novendor_cli_multiarch.adoc
+++ b/modules/client-configuration/pages/snippets/addchannels_novendor_cli_multiarch.adoc
@@ -10,7 +10,7 @@ spacewalk-common-channels \
 <child_channel_name_2> \
 ... <child_channel_name_n>
 ----
-. Synchronize the channels:
+. If xref:administration:custom-channels.adoc#_custom_channel_synchronization[automatic synchronization] is turned off, synchronize the channels:
 +
 ----
 spacewalk-repo-sync -p <base_channel_label>
