--- a/modules/client-configuration/pages/snippets/addchannels_novendor_cli.adoc
+++ b/modules/client-configuration/pages/snippets/addchannels_novendor_cli.adoc
@@ -8,7 +8,7 @@ spacewalk-common-channels \
 <child_channel_label_2> \
 ... <child_channel_label_n>
 ----
-. Synchronize the channels:
+. If xref:administration:custom-channels.adoc#_custom_channel_synchronization[automatic synchronization] is turned off, synchronize the channels:
 +
 ----
 spacewalk-repo-sync -p <base_channel_label>
