Add missing info about RHEL 9 clones: Almalinux, Oracle, Rocky Linux https://github.com/SUSE/spacewalk/issues/18472

--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -14,8 +14,8 @@ endif::[]
 
 [IMPORTANT]
 ====
-Traditional clients are not available on {oracle}{nbsp}8.
-{oracle}{nbsp}8 clients are only supported as Salt clients.
+Traditional clients are not available on {oracle}{nbsp}9 and 8.
+{oracle}{nbsp}9 and {oracle}{nbsp}8 clients are only supported as Salt clients.
 ====
 
 
