--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -89,6 +89,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {almalinux} 9
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
+| {cross}
+| {check}
+
 | {almalinux} 8
 | {x86_64}, {aarch64}
 | {cross}
@@ -111,6 +116,11 @@ ifeval::[{suma-content} == true]
 
 | {debian} 10
 | {x86_64}
+| {cross}
+| {check}
+
+| {oracle} 9
+| {x86_64}, {aarch64}
 | {cross}
 | {check}
 
@@ -224,6 +234,11 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {check}
 
+| {almalinux} 9
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
+| {cross}
+| {check}
+
 | {almalinux} 8
 | {x86_64}, {aarch64}
 | {cross}
@@ -246,6 +261,11 @@ ifeval::[{uyuni-content} == true]
 
 | {debian} 10
 | {x86_64}
+| {cross}
+| {check}
+
+| {oracle} 9
+| {x86_64}, {aarch64}
 | {cross}
 | {check}
 
