--- a/modules/client-configuration/pages/clients-almalinux.adoc
+++ b/modules/client-configuration/pages/clients-almalinux.adoc
@@ -12,8 +12,8 @@ endif::[]
 
 [IMPORTANT]
 ====
-Traditional clients are not available on {almalinux}{nbsp}8.
-{almalinux}{nbsp}8 clients are only supported as Salt clients.
+Traditional clients are not available on {almalinux}.
+{almalinux} clients are only supported as Salt clients.
 ====
 
 [WARNING]
@@ -35,7 +35,7 @@ You do not need to disable SELinux to register {almalinux} clients to {productna
 
 Before you can register {almalinux} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
 
-The architectures currently supported are: `x86_64` and `aarch64`.
+The architectures currently supported are: `x86_64` and `aarch64`, on version 9 additionally {ppc64le} and {s390x}.
 For full list of supported products and architectures, see xref:client-configuration:supported-features.adoc[].
 
 include::snippets/arch-other-note.adoc[]
@@ -50,7 +50,8 @@ For example, when working with `x86_64` architecture, you need this product:
 .{almalinux} Products - WebUI
 |===
 
-| OS Version | Product Name
+| OS Version    | Product Name
+| {almalinux} 9 | {almalinux} 9 x86_64
 | {almalinux} 8 | {almalinux} 8 x86_64
 
 |===
@@ -66,6 +67,7 @@ The channels you need for this procedure are:
 |===
 
 | OS Version | Base Channel
+| {almalinux} 9 | almalinux9-x86_64
 | {almalinux} 8 | almalinux8-x86_64
 
 |===
@@ -82,8 +84,9 @@ The channels you need for this procedure are:
 .{almalinux} Channels - CLI
 |===
 
-| OS Version | Base Channel | Client Channel       | AppStream Channel
-| {almalinux} 8 | almalinux8      | almalinux8-uyuni-client | almalinux8-appstream
+| OS Version    | Base Channel | Client Channel          | AppStream Channel
+| {almalinux} 9 | almalinux9   | almalinux9-uyuni-client | almalinux9-appstream
+| {almalinux} 8 | almalinux8   | almalinux8-uyuni-client | almalinux8-appstream
 
 |===
 
@@ -99,13 +102,13 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 [IMPORTANT]
 ====
-For {almalinux} 8 clients, add both the Base and AppStream channels.
+For {almalinux} 9 and {almalinux} 8 clients, add both the Base and AppStream channels.
 You require packages from both channels.
 If you do not add both channels, you cannot create the bootstrap repository, due to missing packages.
 ====
 endif::[]
 
-If you are using modular channels, you must enable the Python 3.6 module stream on the client.
+If you are using modular channels, you must enable the Python 3.6 module stream on the {almalinux} 8 client.
 If you do not provide Python 3.6, the installation of the [package]``spacecmd`` package will fail.
 
 [NOTE]
