Added suggestions from code review
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -202,7 +202,7 @@ To avoid missing important updates, {suse} recommends to keep your custom channe
 
 By default, custom channels are not synchronized automatically. In order to keep a custom channel up to date, you need to:
 
-* sync it manually by navigating to the [guimenu]``Sync`` tab and click btn:[Sync Now],
+* synchronize it manually by navigating to the [guimenu]``Sync`` tab and click btn:[Sync Now],
 * set up an automated synchronization schedule from the [guimenu]``Repositories`` tab.
 
 It is also possible to enable automatic synchronization for all the custom channels you create. To do this, set in [path]``/etc/rhn/rhn.conf``:
@@ -211,10 +211,10 @@ It is also possible to enable automatic synchronization for all the custom chann
 java.unify_custom_channel_management = 1
 ----
 
-With this property turned on, a sync will happen automatically:
+With this property turned on, a synchronization will happen automatically:
 
 * after adding a repository to a channel from the UI or by using [command]``spacewalk-common-channels``
-* as part of the daily task ``mgr-sync-refresh-default``, which will sync all your custom and vendor channels.
+* as part of the daily task ``mgr-sync-refresh-default``, which will synchronize all your custom and vendor channels.
 
 When the process is started, there are several ways to check if a channel has finished synchronizing:
 
