--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -85,7 +85,9 @@ server.susemanager.forward_registration = 0
 
 
 menu:mgr-sync-refresh-default:[]::
-Synchronizes with SUSE Customer Center (SCC) (``mgr-sync-refresh``). When automatic synchronization is enabled, all custom channels are also synced as part of this task. For more information about custom channel synchronization, see xref:administration:custom-channels.adoc#_custom_channel_synchronization[].
+Synchronizes with SUSE Customer Center (SCC) (``mgr-sync-refresh``).
+When automatic synchronization is enabled, all custom channels are also synchronized as part of this task.
+For more information about custom channel synchronization, see xref:administration:custom-channels.adoc#_custom_channel_synchronization[].
 
 menu:minion-action-cleanup-default:[]::
 Deletes stale client action data from the file system.
