Added suggestions from code review

--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -179,7 +179,7 @@ For each pair of ``suite`` and ``component`` the spezification defines a distinc
 .Procedure: Assigning the Repository to a Channel
 . Assign your new repository to your custom channel by navigating to menu:Software[Manage > Channels], clicking the name of your newly created custom channel, and navigating to the [guimenu]``Repositories`` tab.
 . Ensure the repository you want to assign to the channel is checked, and click btn:[Update Repositories].
-. By default, the sync process starts immediately. For more information about channel synchronization, see below.
+. By default, the synchronization process starts immediately. For more information about channel synchronization, see below.
 
 
 
@@ -195,10 +195,10 @@ For each pair of ``suite`` and ``component`` the spezification defines a distinc
 
 To avoid missing important updates, {suse} recommends to keep your custom channels up to date with the remote repositories changes.
 
-By default, synchronization will happen automatically for all custom channels you create. In particular, a sync will happen:
+By default, a synchronization will happen automatically for all custom channels you create. In particular, it will happen:
 
 * after adding a repository to a channel from the UI or by using [command]``spacewalk-common-channels``
-* as part of the daily task ``mgr-sync-refresh-default``, which will sync all your custom and vendor channels.
+* as part of the daily task ``mgr-sync-refresh-default``, which will synchronize all your custom and vendor channels.
 
 To disable this default behaviour, set in [path]``/etc/rhn/rhn.conf``:
 
@@ -208,7 +208,7 @@ java.unify_custom_channel_management = 0
 
 With this property turned off, no synchronization is performed automatically and, in order to keep a custom channel up to date, you need to:
 
-* sync it manually by navigating to the [guimenu]``Sync`` tab and click btn:[Sync Now],
+* synchronize it manually by navigating to the [guimenu]``Sync`` tab and click btn:[Sync Now],
 * set up an automated synchronization schedule from the [guimenu]``Repositories`` tab.
 
 When the process is started, there are several ways to check if a channel has finished synchronizing:
