Added back the page not shown in navbar, and fixed formatting errors.

--- a/modules/specialized-guides/pages/large-deployments/monitoring.adoc
+++ b/modules/specialized-guides/pages/large-deployments/monitoring.adoc
@@ -6,14 +6,12 @@ You can monitor your {productname} environment using Prometheus and Grafana.
 {productname} Server and Proxy are able to provide self-health metrics.
 You can also install and manage a number of Prometheus exporters on Salt clients.
 
-Prometheus and Grafana packages are included in the {productname} Client Tools for
-
 ifeval::[{suma-content} == true]
- {sle}{nbsp}12, {sle}{nbsp}15, {rhel}{nbsp} 6, {rhel}{nbsp} 7, {rhel}{nbsp} 8 and openSUSE 15.x.
+Prometheus and Grafana packages are included in the {productname} Client Tools for {sle}{nbsp}12, {sle}{nbsp}15, {rhel}{nbsp}7, {rhel}{nbsp}8 and openSUSE 15.x.
 endif::[]
 
 ifeval::[{uyuni-content} == true]
- {sle}{nbsp}12, {sle}{nbsp}15, {centos}{nbsp} 6, {centos}{nbsp} 7, {centos}{nbsp} 8 and openSUSE 15.x.
+Prometheus and Grafana packages are included in the {productname} Client Tools for {sle}{nbsp}12, {sle}{nbsp}15, {centos}{nbsp}7, {centos}{nbsp}8 and openSUSE 15.x.
 endif::[]
 
 You need to install Prometheus and Grafana on a machine separate from the {productname} Server.
