--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -48,6 +48,7 @@ endif::[]
 **** xref:large-deployments/hub-reporting.adoc[Hub Reporting]
 *** xref:large-deployments/retail-large-scale.adoc[Large Retail Environments]
 *** xref:large-deployments/tuning.adoc[Tuning Large Installations]
+*** xref:large-deployments/monitoring.adoc[Monitoring Large Scale Deployments]
 ** xref:qs-publiccloud/overview.adoc[Quick Start: Public Cloud]
 *** xref:qs-publiccloud/setup.adoc[Setting Up]
 *** xref:qs-publiccloud/clients.adoc[Clients]
