--- a/modules/administration/pages/troubleshooting/tshoot-diskspace.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-diskspace.adoc
@@ -27,6 +27,9 @@ You can recover disk space by removing unused software channels.
 For instructions on how to delete vendor channels, see xref:administration:channel-management.adoc[].
 For instructions on how to delete custom channels, see xref:administration:custom-channels.adoc[].
 
+You can also check how often your custom channels are synchronized.
+For instructions on how deal with custom channel synchronization, see xref:administration:custom-channels.adoc#_custom_channel_synchronization[].
+
 You can also recover disk space by cleaning up unused activation keys, content lifecycle projects, and client registrations.
 You can also remove redundant database entries:
 
