--- a/modules/administration/pages/actions.adoc
+++ b/modules/administration/pages/actions.adoc
@@ -70,7 +70,14 @@ To ensure that actions occur in the correct order, use action chains.
 ====
 For transactional update systems, an action chain is executed inside a single snapshot, until there is a reboot action.
 This can cause some limitations.
+
+ifeval::[{uyuni-content} == true]
+For more information, see xref:client-configuration:clients-slemicro.adoc[] and xref:client-configuration:clients-microos.adoc[].
+endif::[]
+
+ifeval::[{suma-content} == true]
 For more information, see xref:client-configuration:clients-slemicro.adoc[].
+endif::[]
 ====
 
 You can use action chains on both traditional and Salt clients.
@@ -132,7 +139,14 @@ For more information about subscribing to software channels, see xref:client-con
 ====
 For transactional update systems, consider that a remote command is run inside a single snapshot.
 This can cause some limitations.
+
+ifeval::[{uyuni-content} == true]
+For more information, see xref:client-configuration:clients-slemicro.adoc[] and xref:client-configuration:clients-microos.adoc[].
+endif::[]
+
+ifeval::[{suma-content} == true]
 For more information, see xref:client-configuration:clients-slemicro.adoc[].
+endif::[]
 ====
 
 
