Tidying up installation section.

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -22,33 +22,40 @@ endif::[]
 *** xref:client-requirements.adoc[Client Requirements]
 *** xref:pubcloud-requirements.adoc[Public Cloud Requirements]
 ** xref:install-intro.adoc[Installation]
-
+*** {productname} Server
 ifeval::[{suma-content} == true]
-*** xref:install-server-unified.adoc[Install Server]
-*** xref:install-proxy-unified.adoc[Install Proxy]
+**** xref:install-server-unified.adoc[Install Server]
 endif::[]
 
 ifeval::[{suma-content} == true]
-*** xref:install-vm.adoc[Install Server in a Virtual Machine with Minimal SLES]
+**** xref:install-vm.adoc[Install Server in a Virtual Machine with Minimal SLES]
 endif::[]
 
 ifeval::[{uyuni-content} == true]
-*** xref:install-uyuni.adoc[Install Uyuni Server with openSUSE]
-*** xref:install-proxy-uyuni.adoc[Install Uyuni Proxy with openSUSE]
+**** xref:install-uyuni.adoc[Install Uyuni Server with openSUSE]
 endif::[]
 
 ifeval::[{suma-content} == true]
-*** xref:install-proxy.adoc[Install Proxy from Packages]
+**** xref:install-ibmz.adoc[Install on IBM Z]
 endif::[]
 
-*** xref:proxy-container-installation.adoc[Install Containerized Proxy]
-*** xref:install-pubcloud.adoc[Install on Public Cloud]
-*** xref:proxy-container-k3s-installation.adoc[Install on K3s]
+**** xref:install-pubcloud.adoc[Install on Public Cloud]
+
+*** {productname} Proxy
+ifeval::[{suma-content} == true]
+**** xref:install-proxy-unified.adoc[Install Proxy]
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+**** xref:install-proxy-uyuni.adoc[Install Uyuni Proxy with openSUSE]
+endif::[]
 
 ifeval::[{suma-content} == true]
-*** xref:install-ibmz.adoc[Install on IBM Z]
+**** xref:install-proxy.adoc[Install Proxy from Packages]
 endif::[]
 
+**** xref:proxy-container-installation.adoc[Install Containerized Proxy]
+**** xref:proxy-container-k3s-installation.adoc[Install on K3s]
 ** xref:setup-intro.adoc[Setup]
 
 ifeval::[{suma-content} == true]
