--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -50,30 +50,34 @@ ifeval::[{suma-content} == true]
 endif::[]
 
 ** xref:setup-intro.adoc[Setup]
+*** {productname} Server
 
 ifeval::[{suma-content} == true]
-*** xref:server-setup.adoc[Server Setup]
+**** xref:server-setup.adoc[Server Setup]
 endif::[]
 
 ifeval::[{uyuni-content} == true]
-*** xref:uyuni-server-setup.adoc[Uyuni Server Setup]
+**** xref:uyuni-server-setup.adoc[Uyuni Server Setup]
 endif::[]
 
+**** xref:setup-wizard.adoc[Setup Wizard]
+**** xref:webui-setup.adoc[Web Interface Setup]
+**** xref:pubcloud-setup.adoc[Public Cloud Setup]
+**** xref:connect-payg.adoc[Connect {payg} instance]
+
+*** {productname} Proxy
+
 ifeval::[{suma-content} == true]
-*** xref:proxy-registration.adoc[Proxy Registration]
-*** xref:proxy-setup.adoc[Proxy Setup]
+**** xref:proxy-registration.adoc[Proxy Registration]
+**** xref:proxy-setup.adoc[Proxy Setup]
 endif::[]
 
 ifeval::[{uyuni-content} == true]
-*** xref:uyuni-proxy-registration.adoc[Uyuni Proxy Registration]
-*** xref:uyuni-proxy-setup.adoc[Uyuni Proxy Setup]
+**** xref:uyuni-proxy-registration.adoc[Uyuni Proxy Registration]
+**** xref:uyuni-proxy-setup.adoc[Uyuni Proxy Setup]
 endif::[]
 
-*** xref:proxy-container-setup.adoc[Containerized Proxy Setup]
-*** xref:pubcloud-setup.adoc[Public Cloud Setup]
-*** xref:webui-setup.adoc[Web Interface Setup]
-*** xref:setup-wizard.adoc[Setup Wizard]
-*** xref:connect-payg.adoc[Connect {payg} instance]
+**** xref:proxy-container-setup.adoc[Containerized Proxy Setup]
 ** xref:upgrade-intro.adoc[Upgrade]
 
 ifeval::[{suma-content} == true]
