Sectioning in Client Config Guide fixed.

--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -25,7 +25,7 @@ The systemd service filename is different.
 Bootstrapping this way will only work if you use the [package]``salt-minion`` being part of the client tools channels or of an official {suse} distributions.
 ====
 
-== Salt Bundle configuration
+=== Salt Bundle configuration
 
 Salt Bundle ([package]``venv-salt-minion``)::
 +
@@ -79,7 +79,7 @@ salt-key -a '<client>'
 --
 
 
-== Salt Minion configuration
+=== Salt Minion configuration
 
 Salt Minion ([package]``salt-minion``)::
 +
