start with 2 tasks Adjust the Uyuni and SUSE Manager 4.3 doc for SLE Micro https://github.com/SUSE/spacewalk/issues/19391

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -144,6 +144,33 @@ endif::[]
 
 
 
+ifeval::[{uyuni-content} == true]
+
+To add the client tools, add these channels from the command prompt:
+
+[[sle-tools-channels-cli]]
+[cols="1,1", options="header"]
+.SLE Micro Channels - CLI
+|===
+
+| OS Version
+| Client Channel
+
+| x
+| x
+
+| {sles} 15 SP4
+| sles15-sp4-uyuni-client
+|===
+
+
+include::snippets/addchannels_novendor_cli.adoc[]
+
+
+endif::[]
+
+
+
 == Check Synchronization Status
 
 ifeval::[{suma-content} == true]
