Backport43. Tidying up installation section.

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -1,5 +1,3 @@
-// Installation and Upgrade Guide Antora Navigation List
-
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Installation and Upgrade Guide
 include::./branding/pdf/entities.adoc[]
@@ -18,36 +16,46 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 ** xref:uyuni-install-requirements.adoc[Requirements]
 endif::[]
+
 *** xref:network-requirements.adoc[Network Requirements]
 **** xref:ports.adoc[Required Network Ports]
 *** xref:client-requirements.adoc[Client Requirements]
 *** xref:pubcloud-requirements.adoc[Public Cloud Requirements]
 ** xref:install-intro.adoc[Installation]
-
+*** {productname} Server
 ifeval::[{suma-content} == true]
-*** xref:install-server-unified.adoc[Install Server]
-*** xref:install-proxy-unified.adoc[Install Proxy]
+**** xref:install-server-unified.adoc[Install Server]
 endif::[]
 
 ifeval::[{suma-content} == true]
-*** xref:install-vm.adoc[Install Server in a Virtual Machine with Minimal SLES]
+**** xref:install-vm.adoc[Install Server in a Virtual Machine with Minimal SLES]
 endif::[]
 
 ifeval::[{uyuni-content} == true]
-*** xref:install-uyuni.adoc[Install Uyuni Server with openSUSE]
-*** xref:install-proxy-uyuni.adoc[Install Uyuni Proxy with openSUSE]
+**** xref:install-uyuni.adoc[Install Uyuni Server with openSUSE]
 endif::[]
 
 ifeval::[{suma-content} == true]
-*** xref:install-proxy.adoc[Install Proxy from Packages]
+**** xref:install-ibmz.adoc[Install on IBM Z]
 endif::[]
-*** xref:proxy-container-installation.adoc[Install Containerized Proxy]
-*** xref:install-pubcloud.adoc[Install on Public Cloud]
-*** xref:proxy-container-k3s-installation.adoc[Install on K3s]
+
+**** xref:install-pubcloud.adoc[Install on Public Cloud]
+
+*** {productname} Proxy
+ifeval::[{suma-content} == true]
+**** xref:install-proxy-unified.adoc[Install Proxy]
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+**** xref:install-proxy-uyuni.adoc[Install Uyuni Proxy with openSUSE]
+endif::[]
 
 ifeval::[{suma-content} == true]
-*** xref:install-ibmz.adoc[Install on IBM Z]
+**** xref:install-proxy.adoc[Install Proxy from Packages]
 endif::[]
+
+**** xref:proxy-container-installation.adoc[Install Containerized Proxy]
+**** xref:proxy-container-k3s-installation.adoc[Install on K3s]
 ** xref:setup-intro.adoc[Setup]
 
 ifeval::[{suma-content} == true]
@@ -67,6 +75,7 @@ ifeval::[{uyuni-content} == true]
 *** xref:uyuni-proxy-registration.adoc[Uyuni Proxy Registration]
 *** xref:uyuni-proxy-setup.adoc[Uyuni Proxy Setup]
 endif::[]
+
 *** xref:proxy-container-setup.adoc[Containerized Proxy Setup]
 *** xref:pubcloud-setup.adoc[Public Cloud Setup]
 *** xref:webui-setup.adoc[Web Interface Setup]
@@ -88,6 +97,7 @@ ifeval::[{uyuni-content} == true]
 **** xref:server-minor-upgrade-uyuni.adoc[Server - Minor Upgrade]
 **** xref:server-major-upgrade-uyuni.adoc[Server - Major Upgrade]
 endif::[]
+
 *** xref:proxy-intro.adoc[Upgrade the Proxy]
 
 ifeval::[{uyuni-content} == true]
@@ -99,9 +109,11 @@ ifeval::[{suma-content} == true]
 **** xref:proxy-x.adoc[Proxy - Major Version Upgrade]
 **** xref:proxy-y-z.adoc[Proxy - Minor Version or Patch Level Upgrade]
 endif::[]
+
 *** xref:db-intro.adoc[Upgrade the Database]
 **** xref:db-migration-xy.adoc[Database Migration to Latest Version]
 ** xref:client-intro.adoc[Upgrade the Clients]
+
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
 endif::[]
