--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -317,7 +317,7 @@ endif::[]
 
 [NOTE]
 ====
-{debian} and {ubuntu} list the {x86_64} architecture as amd64.
+{debian} and {ubuntu} list the {x86_64} architecture as {amd64}.
 ====
 
 //EOL clients
