Corrected architecture for Ubuntu clients (#1885)
* Corrected architecture for Ubuntu clients.

* Update modules/client-configuration/pages/supported-features.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -153,17 +153,17 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {ubuntu} 22.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
 | {ubuntu} 20.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
 | {ubuntu} 18.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
@@ -298,17 +298,17 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {ubuntu} 22.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
 | {ubuntu} 20.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
 | {ubuntu} 18.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
@@ -317,7 +317,7 @@ endif::[]
 
 [NOTE]
 ====
-{debian} and {ubuntu} lists the {x86_64} architecture as amd64.
+{debian} and {ubuntu} list the {x86_64} architecture as {amd64}.
 ====
 
 //EOL clients
