Backport. Corrected architecture for Ubuntu clients.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -160,17 +160,17 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {ubuntu} 22.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
 | {ubuntu} 20.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
 | {ubuntu} 18.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
@@ -305,17 +305,17 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {ubuntu} 22.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
 | {ubuntu} 20.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
 | {ubuntu} 18.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
