--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -132,13 +132,18 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
+| {ubuntu} 22.04
+| {amd64}
+| {cross}
+| {check}
+
 | {ubuntu} 20.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
 | {ubuntu} 18.04
-| {x86_64}
+| {amd64}
 | {cross}
 | {check}
 
