fixed installation navbar

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -77,6 +77,40 @@ ifeval::[{uyuni-content} == true]
 **** xref:uyuni-proxy-setup.adoc[Uyuni Proxy Setup]
 endif::[]
 
+ifeval::[{suma-content} == true]
+**** xref:install-proxy.adoc[Install Proxy from Packages]
+endif::[]
+
+**** xref:proxy-container-installation.adoc[Install Containerized Proxy]
+**** xref:proxy-container-k3s-installation.adoc[Install on K3s]
+** xref:setup-intro.adoc[Setup]
+*** {productname} Server
+
+ifeval::[{suma-content} == true]
+**** xref:server-setup.adoc[Server Setup]
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+**** xref:uyuni-server-setup.adoc[Uyuni Server Setup]
+endif::[]
+
+**** xref:setup-wizard.adoc[Setup Wizard]
+**** xref:webui-setup.adoc[Web Interface Setup]
+**** xref:pubcloud-setup.adoc[Public Cloud Setup]
+**** xref:connect-payg.adoc[Connect {payg} instance]
+
+*** {productname} Proxy
+
+ifeval::[{suma-content} == true]
+**** xref:proxy-registration.adoc[Proxy Registration]
+**** xref:proxy-setup.adoc[Proxy Setup]
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+**** xref:uyuni-proxy-registration.adoc[Uyuni Proxy Registration]
+**** xref:uyuni-proxy-setup.adoc[Uyuni Proxy Setup]
+endif::[]
+
 **** xref:proxy-container-setup.adoc[Containerized Proxy Setup]
 ** xref:upgrade-intro.adoc[Upgrade]
 
