--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -22,65 +22,62 @@ endif::[]
 *** xref:client-requirements.adoc[Client Requirements]
 *** xref:pubcloud-requirements.adoc[Public Cloud Requirements]
 ** xref:install-intro.adoc[Installation]
-*** {productname} Server
+
 ifeval::[{suma-content} == true]
-**** xref:install-server-unified.adoc[Install Server]
+*** xref:install-server-unified.adoc[Install Server]
+*** xref:install-proxy-unified.adoc[Install Proxy]
 endif::[]
 
 ifeval::[{suma-content} == true]
-**** xref:install-vm.adoc[Install Server in a Virtual Machine with Minimal SLES]
+*** xref:install-vm.adoc[Install Server in a Virtual Machine with Minimal SLES]
 endif::[]
 
 ifeval::[{uyuni-content} == true]
-**** xref:install-uyuni.adoc[Install Uyuni Server with openSUSE]
+*** xref:install-uyuni.adoc[Install Uyuni Server with openSUSE]
+*** xref:install-proxy-uyuni.adoc[Install Uyuni Proxy with openSUSE]
 endif::[]
 
 ifeval::[{suma-content} == true]
-**** xref:install-ibmz.adoc[Install on IBM Z]
+*** xref:install-proxy.adoc[Install Proxy from Packages]
 endif::[]
 
-**** xref:install-pubcloud.adoc[Install on Public Cloud]
+*** xref:proxy-container-installation.adoc[Install Containerized Proxy]
+*** xref:install-pubcloud.adoc[Install on Public Cloud]
+*** xref:proxy-container-k3s-installation.adoc[Install on K3s]
+
+ifeval::[{suma-content} == true]
+*** xref:install-ibmz.adoc[Install on IBM Z]
+endif::[]
+
+** xref:setup-intro.adoc[Setup]
+*** {productname} Server
+
+ifeval::[{suma-content} == true]
+**** xref:server-setup.adoc[Server Setup]
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+**** xref:uyuni-server-setup.adoc[Uyuni Server Setup]
+endif::[]
+
+**** xref:setup-wizard.adoc[Setup Wizard]
+**** xref:webui-setup.adoc[Web Interface Setup]
+**** xref:pubcloud-setup.adoc[Public Cloud Setup]
+**** xref:connect-payg.adoc[Connect {payg} instance]
 
 *** {productname} Proxy
+
 ifeval::[{suma-content} == true]
-**** xref:install-proxy-unified.adoc[Install Proxy]
+**** xref:proxy-registration.adoc[Proxy Registration]
+**** xref:proxy-setup.adoc[Proxy Setup]
 endif::[]
 
 ifeval::[{uyuni-content} == true]
-**** xref:install-proxy-uyuni.adoc[Install Uyuni Proxy with openSUSE]
+**** xref:uyuni-proxy-registration.adoc[Uyuni Proxy Registration]
+**** xref:uyuni-proxy-setup.adoc[Uyuni Proxy Setup]
 endif::[]
 
-ifeval::[{suma-content} == true]
-**** xref:install-proxy.adoc[Install Proxy from Packages]
-endif::[]
-
-**** xref:proxy-container-installation.adoc[Install Containerized Proxy]
-**** xref:proxy-container-k3s-installation.adoc[Install on K3s]
-** xref:setup-intro.adoc[Setup]
-
-ifeval::[{suma-content} == true]
-*** xref:server-setup.adoc[Server Setup]
-endif::[]
-
-ifeval::[{uyuni-content} == true]
-*** xref:uyuni-server-setup.adoc[Uyuni Server Setup]
-endif::[]
-
-ifeval::[{suma-content} == true]
-*** xref:proxy-registration.adoc[Proxy Registration]
-*** xref:proxy-setup.adoc[Proxy Setup]
-endif::[]
-
-ifeval::[{uyuni-content} == true]
-*** xref:uyuni-proxy-registration.adoc[Uyuni Proxy Registration]
-*** xref:uyuni-proxy-setup.adoc[Uyuni Proxy Setup]
-endif::[]
-
-*** xref:proxy-container-setup.adoc[Containerized Proxy Setup]
-*** xref:pubcloud-setup.adoc[Public Cloud Setup]
-*** xref:webui-setup.adoc[Web Interface Setup]
-*** xref:setup-wizard.adoc[Setup Wizard]
-*** xref:connect-payg.adoc[Connect {payg} instance]
+**** xref:proxy-container-setup.adoc[Containerized Proxy Setup]
 ** xref:upgrade-intro.adoc[Upgrade]
 
 ifeval::[{suma-content} == true]
